cleaning and color mod

--- a/assets/css/_colors.sass
+++ b/assets/css/_colors.sass
@@ -1,9 +1,9 @@
 $primary: #49240F
 $secondary: #E4A79D
 $mora: #8a4e98
-$rojo: #f76463
+$rojo: #c13c49
 $grisMedio: #3d3e3e
 $turquesa: #2992a4
 $amarillo: #ffe78e
-$amarilloClaro: #ffedab
+$amarilloClaro: #fff7db
 $blanco: #fdfdfd
